apps/demo/manifests/vault/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: vault
  labels:
    name: vault-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: vault.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: vault
            port:
              number: 8200
      - pathType: Prefix
        path: /ui
        backend:
          service:
            name: vault-ui
            port:
              number: 8200
